[gd_scene load_steps=28 format=2]

[ext_resource path="res://Scripts/mainGame.gd" type="Script" id=1]
[ext_resource path="res://Sprites/armlessFreak2.png" type="Texture" id=2]
[ext_resource path="res://Scripts/playerHitbox.gd" type="Script" id=3]
[ext_resource path="res://Sprites/redRect.jpg" type="Texture" id=4]
[ext_resource path="res://Scripts/armsFollow.gd" type="Script" id=5]
[ext_resource path="res://Sprites/pistol.png" type="Texture" id=6]
[ext_resource path="res://Scenes/basicAmmoCounter.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sprites/ammoCounterSprite.png" type="Texture" id=8]


[sub_resource type="Animation" id=1]
resource_name = "playerDeath"
length = 9.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.4, 2.1, 2.8, 3.5, 4.2, 5.4, 6.4, 7.6, 8.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68 ]
}

[sub_resource type="Animation" id=2]
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 22, 23 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:canIdle")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=3]
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20, 21, 22 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:canFall")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:canIdle")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]
length = 5.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 3.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:canIdle")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=5]
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.1, 2.5 ),
"transitions": PoolRealArray( 2.14355, 2.63902, 2.21914, 2.14355 ),
"update": 1,
"values": [ 14, 15, 16, 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:canIdle")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=6]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6, 1, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 53, 54, 55, 56, 57, 58 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:canIdle")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:canFall")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("playerHitbox")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "disable"
}, {
"args": [  ],
"method": "enable"
}, {
"args": [  ],
"method": "disable"
} ]
}

[sub_resource type="Animation" id=7]
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.3, 2, 2.9, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:canIdle")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=8]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 79, 80 ]
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 6.56853, 13.5887 )

[sub_resource type="RectangleShape2D" id=10]

[sub_resource type="Animation" id=11]
resource_name = "0shots"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=12]
resource_name = "1shot"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=13]
resource_name = "2shots"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=14]
resource_name = "3shots"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=15]
resource_name = "4shots"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=16]
resource_name = "5shots"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=17]
resource_name = "6shots"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=18]
resource_name = "7shots"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=19]
resource_name = "8shots"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 8
hframes = 23

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 6.0
anims/playerDeath = SubResource( 1 )
anims/playerFalling = SubResource( 2 )
anims/playerFlip = SubResource( 3 )
anims/playerIdle = SubResource( 4 )
anims/playerJump = SubResource( 5 )
anims/playerLightAttack = SubResource( 6 )
anims/playerRun = SubResource( 7 )
anims/wallCling = SubResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.574898, 3.85572 )
shape = SubResource( 9 )

[node name="playerHitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerHitbox"]
visible = false
position = Vector2( 10.691, 6.09214 )
scale = Vector2( 1.6, 0.7 )
shape = SubResource( 10 )

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -15.0
margin_top = -20.0
margin_right = 176.0
margin_bottom = 84.0
rect_scale = Vector2( 0.15, 0.05 )
max_value = 3.0
value = 3.0
texture_progress = ExtResource( 4 )

[node name="armsFollow" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="gunSprite" type="Sprite" parent="armsFollow"]
position = Vector2( 11.6337, 0.769188 )
scale = Vector2( 0.38, 0.38 )
texture = ExtResource( 6 )

[node name="basicAmmoCounter" parent="." instance=ExtResource( 7 )]
scale = Vector2( 1, 1 )
texture = ExtResource( 8 )
offset = Vector2( 0, -30 )
vframes = 3
hframes = 3

[node name="AmmunitionPlayer" type="AnimationPlayer" parent="basicAmmoCounter"]
anims/0shots = SubResource( 11 )
anims/1shot = SubResource( 12 )
anims/2shots = SubResource( 13 )
anims/3shots = SubResource( 14 )
anims/4shots = SubResource( 15 )
anims/5shots = SubResource( 16 )
anims/6shots = SubResource( 17 )
anims/7shots = SubResource( 18 )
anims/8shots = SubResource( 19 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, -20 )
current = true
zoom = Vector2( 0.5, 0.5 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="playerHitbox" to="playerHitbox" method="_on_playerHitbox_body_entered"]
